--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,8 +40,9 @@ markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
   - footnotes
-  - pymdownx.details
   - pymdownx.mark
+  - pymdownx.details
+  - pymdownx.superfences
   - attr_list
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
@@ -88,6 +89,21 @@ nav:
   - Platform Architecture:
     - Architecture Overview: Platform-Architecture/architecture-overview.md
     - Environments: Platform-Architecture/environments.md
+    - Tech Radar: Platform-Architecture/tech-radar.md
+    - Scaling: Platform-Architecture/scaling.md
+    - Integration Patterns:
+      - Overview: Platform-Architecture/integration-patterns/overview.md
+      - Dynamics & Plower Platform: Platform-Architecture/integration-patterns/dynamics-and-platform-platform.md
+    - Architectural Components:
+      - Istio Service Mesh POC: Platform-Architecture/architectural-components/istio-service-mesh-poc.md
+      - Application Hosting: Platform-Architecture/architectural-components/application-hosting.md
+      - Microservices & AKS: Platform-Architecture/architectural-components/microservices-and-aks.md
+      - Secrets & Configuration: Platform-Architecture/architectural-components/secrets-and-configuration.md
+      - monitoring:
+        - Overview: Platform-Architecture/architectural-components/monitoring/overview.md
+        - Automated Monitoring Implementation: Platform-Architecture/architectural-components/monitoring/automated-monitoring-implementation.md
+        - Network Watcher: Platform-Architecture/architectural-components/monitoring/network-watcher.md
+        - Alerts: Platform-Architecture/architectural-components/monitoring/alerts.md
   - Developer Reference:
     - ASO Helm Library Chart: Developer-Reference/Infrastructure/ASO Helm Library Chart.md
     - ADP Portal: Developer-Reference/Infrastructure/ADP Portal.md
