Add Permissions Model to navigation in mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,6 +96,7 @@ nav:
     - Architecture Overview: Platform-Architecture/architecture-overview.md
     - Environments: Platform-Architecture/environments.md
     - Tech Radar: Platform-Architecture/tech-radar.md
+    - Permissions Model: Platform-Architecture/permissions-model.md
     - Scaling: Platform-Architecture/scaling.md
     - Integration Patterns:
       - Overview: Platform-Architecture/integration-patterns/overview.md
